# training_pro

./: .gitignore  CMakeLists.txt  README.md
include/: Client.h  Server.h  SocDef.h
src/: ServerApp.cpp  SocDef.cpp  client.cpp  server.cpp
unit_tests/: socket_mock.cpp  unit_test_server.cpp
